# elephant-cards

./: .gitignore  Cargo.toml  README.md  idk.sql
assets/: index.html
assets/lib/: material_symbols.css
migrations/: 20231224151826_decks.down.sql  20231224151826_decks.up.sql  20231224152133_cards.down.sql  20231224152133_cards.up.sql
src/: error.rs  main.rs  model.rs  templates.rs
src/web/: cards.rs  decks.rs  mod.rs  pages.rs
templates/: card.html  cards.html  deck.html  decks.html  edit_card.html  index.html
