[package]
name = "elephant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["macros"] }
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["sqlite", "tls-native-tls", "runtime-tokio"] }
thiserror = "1.0.52"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
maud = { version = "0.25.0", features = ["axum"], git = "https://github.com/vidhanio/maud.git", branch = "patch-1" }

